# nms-copilot

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
crates/design/dev/: 0001-nms-technical-resources.md  0002-nms-save-file-format-save.hg.json.md  0003-nms-save-file-analysis-session-findings-2026-03-05.md  0004-nms-atlas-project-notes.md  0005-milestone-1.2-core-types-nms-core.md  0006-milestone-1.3-portal-glyph-converter-nms-core.md  0007-milestone-1.4-distance-calculator-nms-core.md  0008-milestone-1.5-lz4-block-decompressor-nms-save.md  0009-milestone-1.6-metadata-verifier-nms-save.md  0010-milestone-1.7-key-deobfuscation-nms-save.md  0011-milestone-1.8-serde-deserialization-nms-save.md  0012-milestone-1.9-nms-info-command-nms-cli.md  0013-milestone-1.10-nms-convert-command-nms-cli.md  0014-nms-save-file-discovery-nms-savelocate.md  0015-milestone-2.1-galaxy-model-nms-graph.md  0016-milestone-2.2-spatial-indexing-nms-graph.md  0017-milestone-2.3-graph-construction-nms-graph.md  0018-milestone-2.4-query-engine-nms-query.md  0019-milestone-2.5-display-layer-nms-query.md  0020-milestone-2.6-nms-find-command-nms-cli.md  0021-milestone-2.7-nms-show-command-nms-cli.md  0022-milestone-2.8-nms-stats-command-nms-cli.md  0023-milestone-3.1-repl-skeleton-nms-copilot.md  0024-milestone-3.2-persistent-history-nms-copilot.md  0025-milestone-3.3-tab-completion-nms-copilot.md  0026-milestone-3.4-session-context-nms-copilot.md  0027-milestone-3.5-context-aware-prompt-nms-copilot.md  0028-milestone-3.6-rkyv-serialization-nms-cache.md  0029-milestone-3.7-cache-management-nms-cache.md  0030-milestone-3.8-config-file-nms-copilot.md  0031-phase-4a-graph-routing-algorithms-nms-graph.md  0032-phase-4b-route-query-and-cli-integration.md  0033-phase-5a-watch-engine-and-delta-computation.md  0034-phase-5b-consumer-integration-and-robustness.md  0035-phase-6a-mcp-server-and-tools.md  0036-phase-6b-live-updates-and-http-transport.md  0037-phase-7a-cli-polish-export-completions-multi-save.md  0038-phase-7b-model-extensions-multi-galaxy-formats-community.md  0039-phase-7c-release-prep-docs-tests-publishing-themes.md  0040-configurable-banner-support-for-nms-copilot-repl.md  (+3 more)
crates/design/docs/: index.md
crates/design/docs/05-active/: 0002-nms-copilot-detailed-project-plan.md  0003-nms-copilot-project-summary.md
crates/design/docs/06-final/: 0001-parsing-no-mans-sky-save-files-known-resources.md  0004-libnom-reference-guide-for-rust-reimplementation.md
crates/nms/: Cargo.toml
crates/nms-cache/: Cargo.toml
crates/nms-cache/src/: data.rs  error.rs  freshness.rs  lib.rs  serialize.rs
crates/nms-cache/tests/: load_integration.rs
crates/nms-cli/: Cargo.toml
crates/nms-cli/src/: completions.rs  convert.rs  export.rs  find.rs  import.rs  info.rs  main.rs  route.rs  saves.rs  show.rs  stats.rs
crates/nms-cli/tests/: cli_integration.rs  find_integration.rs  info_integration.rs  pipeline_integration.rs  show_integration.rs  stats_integration.rs
crates/nms-compat/: Cargo.toml
crates/nms-compat/src/: lib.rs  nomnom.rs
crates/nms-copilot/: Cargo.toml
crates/nms-copilot/assets/banners/: banner.txt
crates/nms-copilot/src/: banner.rs  commands.rs  completer.rs  config.rs  dispatch.rs  lib.rs  main.rs  paths.rs  prompt.rs  session.rs  setup.rs  watch.rs
crates/nms-copilot/src/map/: input.rs  mod.rs  render.rs  state.rs
crates/nms-copilot/tests/: dispatch_integration.rs  history_integration.rs
crates/nms-core/: Cargo.toml
crates/nms-core/src/: address.rs  biome.rs  delta.rs  discovery.rs  galaxy.rs  glyph.rs  lib.rs  player.rs  system.rs
crates/nms-graph/: Cargo.toml
crates/nms-graph/src/: edges.rs  error.rs  extract.rs  import.rs  lib.rs  model.rs  query.rs  route.rs  spatial.rs
crates/nms-mcp/: Cargo.toml
crates/nms-mcp/src/: config.rs  main.rs  tools.rs
crates/nms-query/: Cargo.toml
crates/nms-query/src/: display.rs  find.rs  lib.rs  route.rs  show.rs  stats.rs  table.rs  theme.rs
crates/nms-save/: Cargo.toml
crates/nms-save/src/: convert.rs  decompress.rs  error.rs  lib.rs  locate.rs  mapping.rs  metadata.rs  model.rs  xxtea.rs
crates/nms-watch/: Cargo.toml
crates/nms-watch/src/: delta.rs  error.rs  lib.rs  snapshot.rs  watcher.rs
crates/nms/src/: lib.rs
data/test/: minimal_save.json  multi_system_save.json
