[package]
name = "nms-cache"
description = "Zero-copy rkyv serialization cache for No Man's Sky Copilot fast startup"
keywords = ["nms", "no-mans-sky", "cache", "zero-copy"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
nms-core = { workspace = true, features = ["archive"] }
nms-graph = { workspace = true }
chrono = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
nms-save = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
