[package]
name = "nms-cli"
description = "One-shot CLI for No Man's Sky Copilot — search planets, plan routes, convert glyphs"
keywords = ["nms", "no-mans-sky", "cli", "portal-glyphs"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[[bin]]
name = "nms"
path = "src/main.rs"

[dependencies]
nms-core = { workspace = true }
nms-save = { workspace = true }
nms-graph = { workspace = true }
nms-query = { workspace = true }
clap = { workspace = true }
oxur-cli = { workspace = true }
tabled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
clap_complete = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
