[package]
name = "nms-copilot"
description = "Interactive galactic copilot for No Man's Sky — REPL with live save file updates"
keywords = ["nms", "no-mans-sky", "repl", "copilot"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[[bin]]
name = "nms-copilot"
path = "src/main.rs"

[dependencies]
nms-core = { workspace = true }
nms-graph = { workspace = true }
nms-query = { workspace = true }
nms-watch = { workspace = true }
nms-cache = { workspace = true }
