[package]
name = "nms-copilot"
description = "Interactive galactic copilot for No Man's Sky — REPL with live save file updates"
keywords = ["nms", "no-mans-sky", "repl", "copilot"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[[bin]]
name = "nms-copilot"
path = "src/main.rs"

[dependencies]
nms-core = { workspace = true }
nms-save = { workspace = true }
nms-graph = { workspace = true }
nms-query = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
reedline = { workspace = true }

[dev-dependencies]
nms-save = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
