[package]
name = "nms-core"
description = "Core types, enums, address math, and portal glyph display for No Man's Sky Copilot"
keywords = ["nms", "no-mans-sky", "portal-glyphs", "galactic-address"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
