[package]
name = "nms-mcp"
description = "MCP server for No Man's Sky Copilot — AI integration for real-time co-exploration"
keywords = ["nms", "no-mans-sky", "mcp", "ai"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[[bin]]
name = "nms-mcp"
path = "src/main.rs"

[dependencies]
nms-core = { workspace = true }
nms-save = { workspace = true }
nms-graph = { workspace = true }
nms-query = { workspace = true }

fabryk-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
http = ["fabryk-mcp/http"]

[dev-dependencies]
nms-save = { workspace = true }
