[package]
name = "nms-query"
description = "Shared query engine for No Man's Sky Copilot (find, route, show, stats)"
keywords = ["nms", "no-mans-sky", "query", "search"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
nms-core = { workspace = true }
nms-graph = { workspace = true }
oxur-cli = { workspace = true }
tabled = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
nms-save = { workspace = true }
serde_json = { workspace = true }
