[package]
name = "nms"
description = "A real-time galactic copilot for No Man's Sky, built in Rust"
keywords = ["nms", "no-mans-sky", "copilot", "portal-glyphs"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
